Bug #89628 --> don't create a session history entry if there is no session history for this docshell chain. Fixes the problem where the mailnews message pane was suddenly getting the scroll bar state remembered across messages. (checking in for radha) r=valeski sr=mscott